[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/winScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/pngs/elementos/winLoseShader.png" type="Texture" id=2]
[ext_resource path="res://assets/font/EmilysCandy-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 3 )

[node name="winScreen" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="winLoseShader" type="Sprite" parent="."]
position = Vector2( 511.833, 381.473 )
scale = Vector2( 1.05364, 1.14486 )
texture = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menuBut" type="Button" parent="Control"]
margin_left = 655.451
margin_top = 532.344
margin_right = 826.451
margin_bottom = 590.344
text = "volver al menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jugarBut" type="Button" parent="Control"]
margin_left = 150.567
margin_top = 537.436
margin_right = 326.567
margin_bottom = 588.436
text = "volver a jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 351.211
margin_top = 338.219
margin_right = 620.211
margin_bottom = 401.219
custom_fonts/font = SubResource( 1 )
text = "GANASTE"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Control/menuBut" to="." method="_on_menuBut_pressed"]
[connection signal="pressed" from="Control/jugarBut" to="." method="_on_jugarBut_pressed"]
